// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root"
  style={Object {}}
>
  <div>
    content
  </div>
</div>
`;

exports[`rendering renders correctly with complex props 1`] = `
<div
  className="root"
  id="my-grid"
  style={
    Object {
      "--rui-local-align-content-xs": "center",
      "--rui-local-align-items-xs": "center",
      "--rui-local-auto-flow": "dense",
      "--rui-local-column-gap-lg": "var(--rui-spacing-4)",
      "--rui-local-column-gap-md": "var(--rui-spacing-2)",
      "--rui-local-columns-md": "1fr 2fr",
      "--rui-local-columns-xs": "1fr",
      "--rui-local-justify-content-xs": "center",
      "--rui-local-justify-items-xs": "center",
      "--rui-local-row-gap-md": "var(--rui-spacing-4)",
      "--rui-local-row-gap-xs": "var(--rui-spacing-3)",
      "--rui-local-rows-md": "auto 200px auto",
      "--rui-local-rows-xs": "auto auto 200px 200px",
    }
  }
>
  <div>
    content
  </div>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root"
  style={Object {}}
>
  <div>
    content 1
  </div>
  <div>
    content 2
  </div>
  <div>
    content 3
  </div>
</div>
`;

exports[`rendering renders correctly with no children 1`] = `""`;

exports[`rendering renders correctly with simple props 1`] = `
<div
  className="root"
  id="my-grid"
  style={
    Object {
      "--rui-local-align-content-xs": "center",
      "--rui-local-align-items-xs": "center",
      "--rui-local-auto-flow": "dense",
      "--rui-local-column-gap-xs": "1rem",
      "--rui-local-columns-xs": "1fr 1fr",
      "--rui-local-justify-content-xs": "center",
      "--rui-local-justify-items-xs": "center",
      "--rui-local-row-gap-xs": "1rem",
      "--rui-local-rows-xs": "auto",
    }
  }
>
  <div>
    content
  </div>
</div>
`;
